<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <Button
            android:text="@string/Register"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.976" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.309"
            android:textSize="40sp" android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/textView"/>
    <Button
            android:text="@string/button1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_height="wrap_content" android:id="@+id/button"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.841" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="250dp" app:srcCompat="@drawable/sherlockicon" android:id="@+id/imageView2"
            android:contentDescription="@string/AltLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="480dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteX="1dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteX="1dp"
            tools:ignore="MissingConstraints" android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toTopOf="@+id/imageButton">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginEnd="24dp"
            app:layout_constraintVertical_bias="0.062" android:linksClickable="true"/>
    <TextView
            android:text="@string/notAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="72dp"/>
    <ImageButton
            android:layout_width="65dp"
            android:layout_height="60dp" app:srcCompat="@drawable/icons8_google" android:id="@+id/imageButton"
            android:backgroundTint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.727"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.072"/>
    <ImageButton
            android:layout_width="68dp"
            android:layout_height="60dp" app:srcCompat="@drawable/icons8_facebook"
            android:id="@+id/imageButton2"
            android:backgroundTint="#FFFFFF" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintVertical_bias="0.727"/>

</androidx.constraintlayout.widget.ConstraintLayout>